--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.22",
     "classnames": "^2.2.6",
+    "env-cmd": "^8.0.2",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "mapbox-gl": "^0.52.0-beta.2",
